<resources>
    <string name="app_name">FSC</string>
    <string name="Rigister_Title">注册</string>
    <string name="Rigister_Welcome">欢迎注册华迪家校通</string>
    <string name="Rigister_GetPIN">获取验证码</string>
    <string name="Rigister_Rigister">注册</string>
    <string name="Rigister_Return">返回登录</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="Homework_Title">作业</string>
    <string name="Homework_Check">查看</string>
    <string name="Homework_Date">Homework_Date</string>
    <string name="Notice_Title">通知</string>
    <string name="Notice_Content">Content</string>
    <string name="Notice_New">New</string>
    <string name="Notice_Edit_Title">通知编辑</string>
    <string name="Notice_Edit_Deliver">发布</string>
    <string name="Notice_Edit_Theme1">通知主题：</string>
    <string name="Notice_Edit_Theme2">Theme2</string>
    <string name="Notice_Edit_Body1">通知正文：</string>
    <string name="Notice_Edit_Body2">Body2</string>
    <string name="Notice_Edit_Picture">添加图片</string>
    <string name="Notice_Edit_Cancel">取消发送</string>
    <string name="title_activity_parent_main_page">ParentMainPageActivity</string>
    <string name="app_inform">华迪家校通（Hwadee Families School Communication，简写：Hwadee-FSC）是指利用无线通信技术和网络技术搭建的家校互通平台，为家校之间提供充分、准确、及时的沟通方式，为全面监控学生和学生成长提供有效的途径，该平台运行于移动终端，家长、学生、教师、领导都可以通过智能手机、平板电脑等媒介进行沟通和信息传递。</string>

</resources>
