<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
      xmlns:tools="http://schemas.android.com/tools"  
        android:id="@+id/LinearLayout"  
        android:layout_width="fill_parent"  
        android:layout_height="fill_parent"  
        android:orientation="vertical"   > 
        
        <LinearLayout
            android:id="@+id/Notice_Edit_LinearLayout_TitleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_TitleBar"
            android:orientation="horizontal">
       
        <ImageView
            android:id="@+id/Notice_Edit_ImageView_Left"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_gravity="left"
            android:background="@drawable/notice_edit_leftarrow"
            />

       <TextView
            android:id="@+id/Notice_Edit_TextView_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Notice_Edit_Title"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
           android:layout_gravity="center"
           android:layout_weight="6"
           android:gravity="center"/>
        
       <Button

            android:id="@+id/Notice_Button_Deliver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color_TitleBar"
            android:text="@string/Notice_Edit_Deliver"

            android:textColor="@color/white"
           android:textSize="20dp"
           android:layout_marginRight="10dp"
           android:layout_weight="1"/>
       
        

      
    </LinearLayout>
     <LinearLayout
            android:id="@+id/Notice_Edit_LinearLayout_Theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="horizontal">
       <TextView
            android:id="@+id/Notice_Edit_TextView_Theme"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"

            android:paddingTop="8sp"
            android:text="@string/Notice_Edit_Theme1"
            android:textColor="#000000"
            android:textSize="20sp" />
      <EditText
            android:id="@+id/Notice_Edit_EditText_Theme2"
            android:layout_width="200dp"
            android:layout_height="36dp"
            android:textSize="15sp"
            android:hint="在此输入"/>
     </LinearLayout>
       <TextView
            android:id="@+id/Notice_Edit_TextView_Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
           android:paddingLeft="20dp"
            android:paddingBottom="8sp"
            android:paddingTop="8sp"
            android:text="@string/Notice_Edit_Body1"
            android:textSize="20sp"

           android:background="@color/white"
           android:textColor="@color/black"/>
        <EditText
            android:id="@+id/Notice_Edit_EditText_Body2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="15sp"
            />
        

     </LinearLayout>