<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/Rigister_TextView_Title"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/color_TitleBar"
        android:gravity="center_horizontal"
        android:paddingBottom="7sp"
        android:paddingTop="8sp"
        android:text="@string/Rigister_Title"
        android:textColor="#ffffff"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Rigister_TextView_Welcome"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Rigister_TextView_Title"
        android:layout_marginTop="17dp"
        android:gravity="center_horizontal"
        android:paddingBottom="20sp"
        android:paddingTop="20sp"
        android:text="@string/Rigister_Welcome"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/Rigister_EditText_Phonenum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Rigister_TextView_Welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:ems="12"
        android:hint="输入手机号码"
        android:padding="10dp"
        android:inputType="textPhonetic" />

    <EditText
        android:id="@+id/Rigister_EditText_PIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Rigister_EditText_Phonenum"
        android:layout_below="@+id/Rigister_EditText_Phonenum"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:ems="8"
        android:hint="输入验证码"
        android:inputType="text"
        android:padding="10dp"
        android:layout_marginTop="12dp">
    </EditText>

    <Button
        android:id="@+id/Rigister_Button_getPIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignTop="@+id/Rigister_EditText_PIN"
        android:layout_toRightOf="@+id/Rigister_EditText_PIN"
        android:text="@string/Rigister_GetPIN" />

    <EditText
        android:id="@+id/Rigister_EditText_EnterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Rigister_Button_getPIN"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:ems="12"
        android:hint="输入密码"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/Rigister_EditText_ConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Rigister_EditText_EnterPassword"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:ems="12"
        android:hint="确认密码"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/Rigister_Button_Rigister"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_below="@+id/Rigister_EditText_ConfirmPassword"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shape"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:text="@string/Rigister_Rigister" />

    <TextView
        android:id="@+id/Rigister_TextView_Return"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Rigister_Button_Rigister"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:paddingBottom="10sp"
        android:paddingTop="10sp"
        android:text="@string/Rigister_Return"
        android:textColor="#4e80ad"
        android:textSize="15sp" />

</RelativeLayout>